# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: coverage-test.yml  unit_tests.yml
content/: ru-hexlet-io-courses.html
page_loader/: __init__.py  checks.py  logging_utils.py  page_loader.py  path_formatter.py
tests/: test_exceptions.py  test_page_loader.py
tests/fixtures/: html_with_img.html  html_with_imgs.html  response.html
tests/fixtures/files/: application.css  script.js
