[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dobro <matematikaigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
wemake-python-styleguide = "^0.15.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
